[tool.poetry]
name = "docs"
version = "0.1.0"
description = "Enso Standard Library documentation generator."
authors = ["Enso Team <contact@enso.org>"]

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "^1.54.1"
PyEvalJS = "^1.0.0"
black = "^20.8b1"
mypy = "^0.800"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
